sum, avg, product function for Vectors.
Signed-off-by: Manuel Daniel Dahmen <manuel.dahmen@gmx.com>